<resources>
    <string name="app_name">Living</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="image_contentDescription">Content description</string>
    <string name="let_s_get_started_text">Lets get started</string>
    <string name="intro_text_description">If you are not already registered go ahead and register yourself! </string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_description_text">Enter your name, email id and password, to login.</string>
    <string name="please_wait">please wait</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cleaning">Cleaning</string>
    <string name="title_groceries">Groceries</string>
    <string name="logout">Logout</string>
    <string name="pending_email_invite">Pending Email invite</string>
    <string name="angela_merkel">Angela Merkel</string>
    <string name="angie_email">angie@bundestag.de</string>
    <string name="edit">Edit</string>
    <string name="invite_member">Invite member</string>
    <string name="leave_group">Leave Group</string>
    <string name="cleaning">Cleaning</string>
    <string name="groceries">Groceries</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="groups_you_are_part_of">Groups you are part of</string>
    <string name="group_name">Group Name</string>
    <string name="create_group">Create Group</string>
    <string name="save">Save</string>
    <string name="item">Item</string>
    <string name="edit_task">Edit Task</string>
    <string name="more_info_button">More Info</string>
    <string name="add_task">Add Task</string>
    <string name="email_colon">"Email: "</string>
    <string name="name_colon">"Name: "</string>
</resources>