<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="de.living.mainApp.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="de.living.mainApp.CleaningFragment"
        android:label="@string/title_cleaning"
        tools:layout="@layout/fragment_cleaning" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="de.living.mainApp.GroceriesFragment"
        android:label="@string/title_groceries"
        tools:layout="@layout/fragment_groceries" />
</navigation>