<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".startup.IntroActivity">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/living_logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lets_get_started_text_marginTop"
        android:text="@string/let_s_get_started_text"
        android:textColor="@color/black"
        android:textSize="@dimen/lets_get_started_text_size" />

    <Button
        android:id="@+id/btn_sign_in_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background="@drawable/shape_button_rounded"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_in"
        android:textColor="#000000"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_sign_up_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background="@drawable/white_border_shape_button_rounded"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/btn_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/intro_text_marginStartEnd"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
        android:text="@string/intro_text_description"
        android:textColor="@color/black"
        android:textSize="@dimen/intro_text_size" />
</LinearLayout>